doc: week04 adding OAuth2 Google
